# okabe

./: README.md  arayuz.cpp  arayuz.h  config.status  configure  configure.ac  helper.cpp  helper.h  main.cpp  okabe.pro  yazilim.cpp  yazilim.h
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
src/: arayuz.cpp  arayuz.h  main.cpp  yazilim.cpp
veri/: alis.cpp  alis.h  kategori.cpp  kategori.h  satis.cpp  satis.h  urun.cpp  urun.h  veritabani.cpp  veritabani.h
