AC_INIT([okabe], [1.0.1])

AC_CHECK_HEADERS([src/arayuz.h src/yazilim.h veri/alis.h veri/kategori.h veri/satis.h veri/urun.h veri/veritabani.h])

AC_CHECK_HEADERS([])

AM_INIT_AUTOMAKE([subdir-objects])

AC_PROG_RANLIB

AC_LANG(C++)

AC_PROG_CXX

AC_SUBST([CC])

AC_CONFIG_FILES([Makefile src/Makefile veri/Makefile])

AC_OUTPUT
